# esp32_spotify_app

./: README.md  sdkconfig  sdkconfig.defaults
components/console_commands/: CMakeLists.txt  ConsoleCommands.cpp  ConsoleCommands.h  Kconfig
components/param/: CMakeLists.txt  IParam.cpp  IParam.h  NvsMgr.cpp  NvsMgr.h  Param.h  ParamMgr.cpp  ParamMgr.h
components/spotify/: CMakeLists.txt  HttpClient.cpp  HttpClient.hpp  Spotify.cpp  Spotify.hpp  SpotifyClient.cpp  SpotifyClient.hpp  SpotifyPlaylist.cpp  SpotifyPlaylist.hpp  SpotifyPlaylistItem.cpp  SpotifyPlaylistItem.hpp  SpotifyQueueItem.cpp  SpotifyQueueItem.hpp
components/ui/: CMakeLists.txt  display_init.cpp  display_init.h  user_config.h
components/wifi/: CMakeLists.txt  wifi.cpp  wifi.h
main/: CMakeLists.txt  idf_component.yml  main.cpp
sq_studio_prj/: spotify_app.sll  spotify_app.spj
